[gd_scene load_steps=2 format=3 uid="uid://mitwx1l784rg"]

[ext_resource type="Script" path="res://scenes/tech/techcard.gd" id="1_d1ix8"]

[node name="TechCard" type="Control"]
minimum_size = Vector2(180, 200)
offset_right = 180.0
offset_bottom = 200.0
script = ExtResource( "1_d1ix8" )
metadata/_edit_use_custom_anchors = true

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 180.0
offset_bottom = 200.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
offset_right = 180.0
offset_bottom = 200.0
theme_override_constants/margin_right = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 170.0
offset_bottom = 190.0

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_right = 160.0
offset_bottom = 26.0
text = "Better Farming I"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 160.0
offset_bottom = 82.0
text = "Increase food yield by +2"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ChooseButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
minimum_size = Vector2(180, 200)
offset_right = 180.0
offset_bottom = 200.0

[connection signal="pressed" from="ChooseButton" to="." method="_on_choose_button_pressed"]
